--- a/index.html
+++ b/index.html
@@ -23,37 +23,45 @@
 
 </head>
 <nav>
-
-    <div class="head-shadow">
-        <img src="./images/silhoutte.png" alt="">
+    <div class="logo-title">
+        <div class="head-shadow">
+            <img src="./images/silhoutte.png" alt="">
+        </div>
+        <h1>Aryan's Portfolio</h1>
     </div>
-    <h1>Aryan's Portfolio</h1>
-
     <ul>
-        <li class="nav-item">
-            <div class="icon">
-                <img src="./images/carousel.svg" alt="Projects">
-            </div>
-            <div class="title">Projects</div>
-        </li>
-        <li class="nav-item">
-            <div class="icon">
-                <img src="./images/skill.svg" alt="skill">
-            </div>
-            <div class="title">Skills</div>
-        </li>
-        <li class="nav-item">
-            <div class="icon">
-                <img src="./images/info.svg" alt="info">
-            </div>
-            <div class="title">Info</div>
-        </li>
-        <li class="nav-item">
-            <div class="icon">
-                <img src="./images/contact.svg" alt="Contact">
-            </div>
-            <div class="title">Contact</div>
-        </li>
+        <a href="#">
+            <li class="nav-item">
+                <div class="icon">
+                    <img src="./images/carousel.svg" alt="Projects">
+                </div>
+                <div class="title">Projects</div>
+            </li>
+        </a>
+        <a href="#">
+            <li class="nav-item">
+                <div class="icon">
+                    <img src="./images/skill.svg" alt="skill">
+                </div>
+                <div class="title">Skills</div>
+            </li>
+        </a>
+        <a href="#">
+            <li class="nav-item">
+                <div class="icon">
+                    <img src="./images/info.svg" alt="info">
+                </div>
+                <div class="title">Info</div>
+            </li>
+        </a>
+        <a href="#">
+            <li class="nav-item">
+                <div class="icon">
+                    <img src="./images/contact.svg" alt="Contact">
+                </div>
+                <div class="title">Contact</div>
+            </li>
+        </a>
     </ul>
 </nav>
 
