--- a/index.html
+++ b/index.html
@@ -7,68 +7,199 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aryan's Portfolio</title>
 
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
+    <!-- Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Alkatra&display=swap" rel="stylesheet">
+
+    <!-- Swiper CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+
+    <!-- Font awesome css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+        integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css">
 
-    <!-- Font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Alkatra&display=swap" rel="stylesheet">
-
-
 </head>
-<nav>
-    <div class="logo-title">
-        <div class="head-shadow">
-            <img src="./images/silhoutte.png" alt="">
-        </div>
-        <h1>Aryan's Portfolio</h1>
-    </div>
-    <ul>
-        <a href="#">
-            <li class="nav-item">
-                <div class="icon">
-                    <img src="./images/carousel.svg" alt="Projects">
-                </div>
-                <div class="title">Projects</div>
-            </li>
-        </a>
-        <a href="#">
-            <li class="nav-item">
-                <div class="icon">
-                    <img src="./images/skill.svg" alt="skill">
-                </div>
-                <div class="title">Skills</div>
-            </li>
-        </a>
-        <a href="#">
-            <li class="nav-item">
-                <div class="icon">
-                    <img src="./images/info.svg" alt="info">
-                </div>
-                <div class="title">Info</div>
-            </li>
-        </a>
-        <a href="#">
-            <li class="nav-item">
-                <div class="icon">
-                    <img src="./images/contact.svg" alt="Contact">
-                </div>
-                <div class="title">Contact</div>
-            </li>
-        </a>
-    </ul>
-</nav>
+
 
 <body>
+    <nav>
+        <div class="logo-title">
+            <div class="head-shadow">
+                <img src="./images/silhoutte.png" alt="">
+            </div>
+            <h1 style="color: white">Aryan's Portfolio</h1>
+        </div>
+        <ul>
+            <a href="#myProjects">
+                <li class="nav-item">
+                    <div class="icon">
+                        <img src="./images/carousel.svg" alt="Projects">
+                    </div>
+                    <div class="title">Projects</div>
+                </li>
+            </a>
+            <a href="#mySkills">
+                <li class="nav-item">
+                    <div class="icon">
+                        <img src="./images/skill.svg" alt="skill">
+                    </div>
+                    <div class="title">Skills</div>
+                </li>
+            </a>
+            <a href="#">
+                <li class="nav-item">
+                    <div class="icon">
+                        <img src="./images/info.svg" alt="info">
+                    </div>
+                    <div class="title">Info</div>
+                </li>
+            </a>
+            <a href="#connect-section">
+                <li class="nav-item">
+                    <div class="icon">
+                        <img src="./images/contact.svg" alt="Contact">
+                    </div>
+                    <div class="title">Connect</div>
+                </li>
+            </a>
+        </ul>
+    </nav>
+
+    <section class="projects">
+        <div class="heading" id="myProjects">My Projects</div>
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="4" aria-label="Slide 4"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./images/carousel-1.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>First slide label</h5>
+                        <p>Some representative placeholder content for the first slide.</p>
+                    </div>
+                </div>
+                <div class="carousel-item ">
+                    <img src="./images/carousel-2.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Second slide label</h5>
+                        <p>Some representative placeholder content for the second slide.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./images/carousel-3.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Third slide label</h5>
+                        <p>Some representative placeholder content for the third slide.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="./images/carousel-4.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Fourth slide label</h5>
+                        <p>Some representative placeholder content for the fourth slide.</p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </section>
+
+    <section class="skills">
+        <div class="heading" id="mySkills">My Skills</div>
+        <div class="swiper mySwiper container">
+            <div class="swiper-wrapper content">
+                <div class="swiper-slide skill-card">
+                    <img src="./images/python-skill.png" alt="icon">
+                    <span>Python</span>
+                </div>
+                <div class="swiper-slide skill-card">
+                    <img src="./images/java-skill.svg" alt="icon">
+                    <span>Java</span>
+                </div>
+                <div class="swiper-slide skill-card">
+                    <img src="./images/cpp-skill.png" alt="icon">
+                    <span>C++</span>
+                </div>
+                <div class="swiper-slide skill-card">
+                    <img src="./images/js-skill.png" alt="icon">
+                    <span>JavaScript</span>
+                </div>
+                <div class="swiper-slide skill-card">
+                    <img src="./images/web-skill.png" alt="icon">
+                    <span>Web Development</span>
+                </div>
+                <div class="swiper-slide skill-card">
+                    <img src="./images/django-skill.svg" alt="icon">
+                    <span>Django</span>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <section class="connect" id="connect-section">
+        <div class="heading">Connect<br>With<br>Me!</div>
+        <div class="links">
+            <ul>
+                <li><i class="fa-regular fa-envelope"></i><a href="mailto: aryanrajput039@gmail.com" target="_blank" class="title">Email</a></li>
+                <li><i class="fa-brands fa-linkedin"></i><a href="https://www.linkedin.com/in/aryan-rajput-272072201/" target="_blank" class="title">LinkedIn</a></li>
+                <li><i class="fa-brands fa-whatsapp"></i><a href="https://wa.me/+919717075101" target="_blank" class="title">WhatsApp</a></li>
+                <li><i class="fa-brands fa-instagram"></i><a href="https://www.instagram.com/aryn_rjpt/" target="_blank" class="title">Instagram</a></li>
+                <li><i class="fa-brands fa-github"></i><a href="https://github.com/aryn-rjpt" target="_blank" class="title">Github</a></li>
+            </ul>
+        </div>
+    </section>
 
 
 
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
+        integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
+        integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
+        crossorigin="anonymous"></script>
+
+    <!-- Swiper JS -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+
+
+    <!-- Initialize Swiper -->
+    <script>
+        var swiper = new Swiper(".mySwiper", {
+            slidesPerView: 4,
+            centeredSlides: true,
+            spaceBetween: 30,
+            grabCursor: true,
+            rewind: true,
+            preventClicks: true,
+            autoplay: {
+                delay: 500,
+                pauseOnMouseEnter: true,
+            },
+        });
+    </script>
 </body>
 
 </html>
