--- a/index.html
+++ b/index.html
@@ -80,8 +80,6 @@
         </div>
     </div>
 
-
-
     <nav>
         <div class="logo-title">
             <div class="head-shadow">
@@ -106,7 +104,7 @@
                     <div class="title">Skills</div>
                 </li>
             </a>
-            <a href="#">
+            <a href="#myinfo">
                 <li class="nav-item">
                     <div class="icon">
                         <img src="./images/info.svg" alt="info">
@@ -209,6 +207,18 @@
 
     </section>
 
+    <section class="my-info" id="myinfo">
+        <div class="details">
+            <ul>
+                <li>Education: Pursuing B.Sc (H) CS</li>
+                <li>Institution: University of Delhi</li>
+                <li>Location: New Delhi, India</li>
+                <li>Age: 19</li>
+            </ul>
+        </div>
+        <div class="heading">About <br>Me</div>
+    </section>
+
     <section class="connect" id="connect-section">
         <div class="heading">Connect<br>With<br>Me!</div>
         <div class="links">
@@ -246,7 +256,7 @@
             rewind: true,
             preventClicks: true,
             autoplay: {
-                delay: 500,
+                delay: 1500,
                 pauseOnMouseEnter: true,
             },
         });
