--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" media="screen and (max-width: 700px)" href="phone.css">
 
 </head>
 
@@ -137,29 +138,29 @@
                 <div class="carousel-item active">
                     <img src="./images/carousel-1.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>First slide label</h5>
-                        <p>Some representative placeholder content for the first slide.</p>
+                        <h5></h5>
+                        <p></p>
                     </div>
                 </div>
                 <div class="carousel-item ">
                     <img src="./images/carousel-2.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
-                        <p>Some representative placeholder content for the second slide.</p>
+                        <h5></h5>
+                        <p></p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="./images/carousel-3.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
+                        <h5></h5>
+                        <p></p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="./images/carousel-4.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Fourth slide label</h5>
-                        <p>Some representative placeholder content for the fourth slide.</p>
+                        <h5></h5>
+                        <p></p>
                     </div>
                 </div>
             </div>
@@ -209,18 +210,26 @@
 
     <section class="my-info" id="myinfo">
         <div class="details">
-            <ul>
+            <ul id="desktop-details">
                 <li>Education: Pursuing B.Sc (H) CS</li>
                 <li>Institution: University of Delhi</li>
                 <li>Location: New Delhi, India</li>
                 <li>Age: 19</li>
             </ul>
+            <ul id="mobile-details">
+                <li>Education:<br> Pursuing B.Sc (H) CS</li>
+                <li>Institution:<br> University of Delhi</li>
+                <li>Location:<br> New Delhi, India</li>
+                <li>Age: 19</li>
+            </ul>
         </div>
-        <div class="heading">About <br>Me</div>
+        <div class="heading" id="desktop-info-heading">About <br>Me</div>
+        <div class="heading" id="mobile-info-heading">About Me</div>
     </section>
 
     <section class="connect" id="connect-section">
-        <div class="heading">Connect<br>With<br>Me!</div>
+        <div class="heading" id="desktop-connect-heading">Connect<br>With<br>Me!</div>
+        <div class="heading" id="mobile-connect-heading">Connect With Me!</div>
         <div class="links">
             <ul>
                 <li><i class="fa-regular fa-envelope"></i><a href="mailto: aryanrajput039@gmail.com" target="_blank" class="title">Email</a></li>
@@ -251,7 +260,6 @@
         var swiper = new Swiper(".mySwiper", {
             slidesPerView: 4,
             centeredSlides: true,
-            spaceBetween: 30,
             grabCursor: true,
             rewind: true,
             preventClicks: true,
@@ -259,6 +267,21 @@
                 delay: 1500,
                 pauseOnMouseEnter: true,
             },
+            // responsive breakpoints
+            // breakpoints: {
+            //     499:{
+            //         slidesPerView: 1
+            //     },
+            //     599:{
+            //         slidesPerView: 2
+            //     },
+            //     699:{
+            //         slidesPerView: 3
+            //     },
+            //     799:{
+            //         slidesPerView: 4
+            //     }
+            // }
         });
 
 
