--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <nav>
         <div class="logo-title">
             <div class="head-shadow">
-                <img src="./images/silhoutte.png" alt="">
+                <img src="./images/silhoutte.webp" alt="">
             </div>
             <h1 style="color: white">Aryan's Portfolio</h1>
         </div>
@@ -136,28 +136,28 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./images/carousel-1.jpg" class="d-block w-100" alt="...">
+                    <img src="./images/carousel-1.webp" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5></h5>
                         <p></p>
                     </div>
                 </div>
                 <div class="carousel-item ">
-                    <img src="./images/carousel-2.jpg" class="d-block w-100" alt="...">
+                    <img src="./images/carousel-2.webp" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5></h5>
                         <p></p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/carousel-3.jpg" class="d-block w-100" alt="...">
+                    <img src="./images/carousel-3.webp" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5></h5>
                         <p></p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/carousel-4.jpg" class="d-block w-100" alt="...">
+                    <img src="./images/carousel-4.webp" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5></h5>
                         <p></p>
@@ -180,7 +180,7 @@
         <div class="swiper mySwiper container">
             <div class="swiper-wrapper content">
                 <div class="swiper-slide skill-card">
-                    <img src="./images/python-skill.png" alt="icon">
+                    <img src="./images/python-skill.webp" alt="icon">
                     <span>Python</span>
                 </div>
                 <div class="swiper-slide skill-card">
@@ -188,15 +188,15 @@
                     <span>Java</span>
                 </div>
                 <div class="swiper-slide skill-card">
-                    <img src="./images/cpp-skill.png" alt="icon">
+                    <img src="./images/cpp-skill.webp" alt="icon">
                     <span>C++</span>
                 </div>
                 <div class="swiper-slide skill-card">
-                    <img src="./images/js-skill.png" alt="icon">
+                    <img src="./images/js-skill.webp" alt="icon">
                     <span>JavaScript</span>
                 </div>
                 <div class="swiper-slide skill-card">
-                    <img src="./images/web-skill.png" alt="icon">
+                    <img src="./images/web-skill.webp" alt="icon">
                     <span>Web Development</span>
                 </div>
                 <div class="swiper-slide skill-card">
@@ -266,22 +266,7 @@
             autoplay: {
                 delay: 1500,
                 pauseOnMouseEnter: true,
-            },
-            // responsive breakpoints
-            // breakpoints: {
-            //     499:{
-            //         slidesPerView: 1
-            //     },
-            //     599:{
-            //         slidesPerView: 2
-            //     },
-            //     699:{
-            //         slidesPerView: 3
-            //     },
-            //     799:{
-            //         slidesPerView: 4
-            //     }
-            // }
+            }
         });
 
 
