--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
+
+
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" media="screen and (max-width: 1000px)" href="phone.css">
@@ -126,38 +128,39 @@
 
     <section class="projects">
         <div class="heading" id="myProjects">My Projects</div>
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <div id="myCarousel" class="carousel slide" >
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"
                     aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="4" aria-label="Slide 4"></button>
             </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
+            <div class="carousel-inner" data-bs-ride="carousel">
+                <div class="carousel-item active" data-bs-interval="2000">
                     <img src="./images/carousel-1.webp" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5></h5>
-                        <p></p>
+                        <h5>A General Purpose College Website</h5>
+                    </div>
+                    <div class="hover-content flip-in-hor-bottom">
+
+                        <h2>A General Purpose College Website</h2>
+                        
+                        <p>
+                            This college website provides a comprehensive platform for students, staff, and faculty to access important resources and information. With a user-friendly interface, users can easily navigate the website to find Weekly Time Tables, campus news and events, as well as explore programs. The website also offers easy access to the admissions process and faculty and staff profiles.
+                        </p>
+
+                        <button class="btn btn-primary visit-btn mt-5" onclick="window.open('http://arynrjpt.pythonanywhere.com')">Visit</button>
                     </div>
                 </div>
-                <div class="carousel-item ">
+                <div class="carousel-item" data-bs-interval="2000">
                     <img src="./images/carousel-2.webp" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5></h5>
                         <p></p>
                     </div>
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item" data-bs-interval="2000">
                     <img src="./images/carousel-3.webp" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5></h5>
-                        <p></p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="./images/carousel-4.webp" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5></h5>
                         <p></p>
@@ -254,29 +257,12 @@
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 
-
-    <script>
-        // Initialize Swiper
-        var swiper = new Swiper(".mySwiper", {
-            slidesPerView: 4,
-            centeredSlides: true,
-            grabCursor: true,
-            rewind: true,
-            preventClicks: true,
-            autoplay: {
-                delay: 1500,
-                pauseOnMouseEnter: true,
-            }
-        });
+    <!-- JQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
 
 
-        // Preloader 
-        var loader = document.getElementById('preloader')
+    <script src="myJS.js"></script>
 
-        window.addEventListener('load', function(){
-            loader.style.display = 'none';
-        })
-    </script>
 </body>
 
 </html>
