added handlebars skill

--- a/index.html
+++ b/index.html
@@ -285,6 +285,10 @@
                     <img src="./images/django-skill.svg" alt="icon">
                     <span>Django</span>
                 </div>
+                <div class="swiper-slide skill-card">
+                    <img src="./images/handlebars.png" style="width: 9vw" alt="icon">
+                    <span>Handlebars</span>
+                </div>
             </div>
         </div>
 
