--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aryan's Portfolio</title>
+    <title>Aryan's Website</title>
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/images/favicon.png">
@@ -148,15 +148,15 @@
             <div class="head-shadow">
                 <img src="./images/silhoutte.webp" alt="">
             </div>
-            <h1 style="color: white">Aryan's Portfolio</h1>
+            <h1 style="color: white">Aryan's Website</h1>
         </div>
         <ul>
-            <a href="#myProjects">
+            <a href="#myPortfolio">
                 <li class="nav-item">
                     <div class="icon">
-                        <img src="./images/carousel.svg" alt="Projects">
+                        <img src="./images/carousel.svg" alt="portfolio">
                     </div>
-                    <div class="title">Projects</div>
+                    <div class="title">Portfolio</div>
                 </li>
             </a>
             <a href="#mySkills">
@@ -193,8 +193,8 @@
         </div>
     </section>
 
-    <section class="projects">
-        <div class="heading" id="myProjects">My Projects</div>
+    <section class="portfolio">
+        <div class="heading" id="myPortfolio">Portfolio</div>
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
